# merle

./: .gitignore  .gitmodules  Andrzejewski.cu  CMakeLists.txt  README.md  benchCollection.sh  dumb_pool.cuh  profileDat.cu  profileMain.cu  runTestCases.cu  synthMain.cu  wahDeviceStruct.cu  wahGpu.cuh  wahGpuCmprs.cu  wahGpuDirect.cu
host/: nbitRandGen.c  nbitRandGen.h  roaring.h  wahConv.c  wahConvMain.c  wahCpu.c  wahCpu.h  wahRandGen.c
moderngpu/: context.cuh  cpp11.cuh  cta_load_balance.cuh  cta_merge.cuh  cta_mergesort.cuh  cta_reduce.cuh  cta_scan.cuh  cta_search.cuh  cta_segscan.cuh  cta_segsort.cuh  intrinsics.cuh  kernel_bulkinsert.cuh  kernel_bulkremove.cuh  kernel_compact.cuh  kernel_intervalmove.cuh  kernel_join.cuh  kernel_load_balance.cuh  kernel_merge.cuh  kernel_mergesort.cuh  kernel_reduce.cuh  kernel_scan.cuh  kernel_segreduce.cuh  kernel_segsort.cuh  kernel_sortedsearch.cuh  kernel_workcreate.cuh  launch_box.cuh  launch_params.cuh  loadstore.cuh  memory.cuh  meta.cuh  operators.cuh  search.cuh  sort_networks.cuh  transform.cuh  tuple.cuh  types.cuh  util.cuh
res/: drawFigs.ipynb  stPrep.ipynb
tbl/: colJoin.sh  extractCols.py  extractCols.sh  stPrep.ipynb  zipfLstGen.py
